[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.60"
